--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,14 @@ header {
     color: whitesmoke;
 }
 
+.house {
+    font-size: 3em;
+    display: flex;
+    justify-content: center;
+}
+
 .social {
+    margin-left: -10px;
     list-style: none;
 }
 
